Fixed the broken CSS
- For some reason I was linking out to more than one stylesheet in index.html, one of which was only appropriate for the Huge website stuff
- So... now it looks pretty good?

--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,12 @@
   /* font-weight:normal; */
 }
 
-body {
+
+body,
+html {
   margin: 0;
   padding: 0;
+  background-color: black;
 }
 
 canvas {
